# DirectXEffect2GLSL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Common/cpp/: CMakeLists.txt  cpp.c  cpp.h  cpp.l
Platform/: CmakeLists.txt  main.cpp
testfiles/: blockEffect.fx  blockeffect.fx.essl  blockeffect.fx.glsl
